--- a/hw-9/.gitignore
+++ b/hw-9/.gitignore
@@ -1,5 +1,5 @@
 
-# Created by https://www.gitignore.io/api/macos,python,jupyternotebook
+# Created by https://www.gitignore.io/api/macos,python,windows,jupyternotebook
 
 ### JupyterNotebook ###
 .ipynb_checkpoints
@@ -134,5 +134,26 @@ venv.bak/
 # mypy
 .mypy_cache/
 
+### Windows ###
+# Windows thumbnail cache files
+Thumbs.db
+ehthumbs.db
+ehthumbs_vista.db
 
-# End of https://www.gitignore.io/api/macos,python,jupyternotebook
+# Folder config file
+Desktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# Windows Installer files
+*.cab
+*.msi
+*.msm
+*.msp
+
+# Windows shortcuts
+*.lnk
+
+
+# End of https://www.gitignore.io/api/macos,python,windows,jupyternotebook
